daylight-equation/fixtures/daylight-v06-m1/vectors/negative/N16_insufficient_q_threshold/AuthMsg.hex
8378216461796c696768742e617574686f72697a6174696f6e2e6d6573736167652e763675575543492d4441594c494748543a415554483a763658402ad489b77b8e1af4465216c95a915bd929027109f6c0cd14c678eb2a6feffa0b794f5c62bc5a0eeed6a81ff41e4b568687e10a8bcdf924d93f05b1a61104c106
